--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,7 +3,7 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'go-app'
+  - job_name: 'goofy_cdn'
     static_configs:
       - targets: ['app-dev:8080', 'app-prod:8080']
     metrics_path: '/metrics'
