--- a/k8s/cdn-deployment.yaml
+++ b/k8s/cdn-deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: goofy-cdn
-        image: misterzapp/goofy-cdn:latest
+        # image: misterzapp/goofy-cdn:latest
+        image: goofy-cdn:local
         ports:
         - containerPort: 8080
         resources:
