fix(cdn): fiche cache only getRequest

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,11 @@ services:
       - "8080:8080"
     volumes:
       - ./app/CDN:/app
+    networks:
+      - goofy-network
+    depends_on:
+      - backend
+
   backend:
     build:
       context: .
