--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -80,7 +80,7 @@ jobs:
           aws-region: eu-west-3
 
       - name: Update kube config
-        run: aws eks update-kubeconfig --name goofy-cluster
+        run: aws eks update-kubeconfig --name hetic-groupe-5
 
       - name: Create or update Kubernetes secrets
         run: |
