--- a/app/back/.env
+++ b/app/back/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://mongodb:27017
+# MONGO_URI=mongodb://mongodb:27017
 GIN_MODE=debug
 
 JWT_SECRET=votre_secret_jwt_tres_securise
@@ -9,5 +9,7 @@ MAX_UPLOAD_SIZE=10485760  # 10MB en bytes
 
 # Configuration MongoDB
 MONGO_DB_NAME=goofy_cdn
-MONGO_USER=admin
-MONGO_PASSWORD=password
+MONGO_USER=root
+# MONGO_USER=admin
+# MONGO_PASSWORD=password
+MONGO_PASSWORD=root
