--- a/k8s/back-deployment.yaml
+++ b/k8s/back-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: goofy-cdn-back:latest
+          image: misterzapp/goofy-back:latest
           ports:
             - containerPort: 8080
           env:
