--- a/k8s/local-secrets.yaml
+++ b/k8s/local-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: goofy-cdn
 type: Opaque
 stringData:
-  mongodb-uri: "mongodb://localhost:27017/goofy"
+  mongodb-uri: "mongodb+srv://root:KHQwwlpkRkj2Gss1@hetic-cdn.w3j7f.mongodb.net/?retryWrites=true&w=majority&appName=hetic-cdn"
   jwt-secret: "local-development-secret"
 ---
 apiVersion: v1
