--- a/k8s/cdn-deployment.yaml
+++ b/k8s/cdn-deployment.yaml
@@ -21,16 +21,16 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: MONGODB_URI
+            - name: MONGO_URI
               valueFrom:
                 secretKeyRef:
-                  name: mongodb-secret
-                  key: MONGODB_URI
+                  name: app-secrets
+                  key: mongodb-uri
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: jwt-secret
-                  key: JWT_SECRET
+                  name: app-secrets
+                  key: jwt-secret
           resources:
             limits:
               cpu: "500m"
@@ -58,10 +58,13 @@ kind: Service
 metadata:
   name: cdn-service
   namespace: goofy-cdn
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
 spec:
   selector:
     app: cdn
   ports:
     - port: 8081
       targetPort: 8081
-  type: ClusterIP
+  type: LoadBalancer
